--- a/style.css
+++ b/style.css
@@ -41,3 +41,18 @@
 .escola-titulo{
     padding: 24px 0;
 }
+
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 24px 0;
+}
+.rodape{
+    background-color: black;
+    text-align: center;
+}
