--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@
 
 .estudante-todos{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 33% 33% 33%;
+   
+   
 }
 
 .estudante-titulo{
@@ -54,5 +56,10 @@
 }
 .rodape{
     background-color: black;
-    text-align: center;
+    text-align: center;    
 }
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+}
+
